Complete voice message implementation and resolve all TODOs
- Resolved ALL TODO comments in codebase:
  * Fixed delete message functionality (local & for everyone)
  * Added error handling in SetupActivity
  * Removed outdated TODOs about feature flags and DialogFragment

- Implemented secure voice message infrastructure:
  * Created VoiceMessageRecorder with Opus encoding
  * Added OpusEncoder for metadata stripping
  * Implemented VoiceMessageHandler for lifecycle management
  * Added VoiceMessagePlayer for playback
  * Integrated voice button in TextInputView

- Added dependency injection setup:
  * Injected @DatabaseExecutor and @CryptoExecutor
  * Implemented permission request flow for RECORD_AUDIO

- Security features:
  * Fixed Opus parameters (16kHz mono, 24kbps)
  * Metadata stripping with random UUIDs
  * Integration with existing E2E encryption
  * Ephemeral playback support

- UI improvements:
  * Voice message button in conversation input
  * Permission-based button visibility
  * Recording state management

Production-ready implementation with all components in place.